@@ -92,7 +92,8 @@ geos_unit_SOURCES = \
 	capi/GEOSPreparedGeometryTest.cpp \
 	capi/GEOSPolygonizer_getCutEdgesTest.cpp \
 	capi/GEOSBufferTest.cpp \
-	capi/GEOSGeom_create.cpp
+	capi/GEOSGeom_create.cpp \
+	capi/GEOSGeom_extractUniquePointsTest.cpp
 
 noinst_HEADERS = \
 	utility.h
